# apple_cache

./: .gitattributes  .gitignore  Cargo.toml  README.en.md  README.md  build.sh  cache.json  mac.toml  serial  vmp_cmd
.cargo/: config
api/: Cargo.toml  build.rs  uniffi.toml
api/src/: cache.rs  emu.rs  lib.rs  lib.udl  mac_serial.rs  macho.rs  main.rs  patch.rs
api/src/cache/: emulator.rs  mod.rs
api/src/macho/: emulator.rs  macho.rs  mod.rs
api/src/patch/: emulator.rs  mod.rs  osx.rs  patch.rs
bindings/: generate.txt
bindings/python/: apple_cache.py  register.py
blob/: AssetCache  AssetCache~.x64  cert.cer  reloc.txt
cast_tool/: Cargo.toml
cast_tool/src/: main.rs
vmp/: VMProtectLicense.ini
